feat: refactored health check in order to probing TableClient availability
