# openapi/openapi.json
@@ -4,7 +4,7 @@
     "description" : "A service that permits to generate unique IUV codes for each creditor institution.\n\n**STANDARD ERRORS:**\nNAME | CODE | DESCRIPTION\n- | - | -\n**IUVG-1000**  | *GENERIC_ERROR* | Error while generating IUV.  *...error description...*\n**IUVG-1001**  | *VALIDATION_ERROR* | Error while validating IUV generation request.  *...error description...*\n**IUVG-1101**  | *GENERATION_MAX_RETRIES_REACHED* | Error while generating IUV. Reached the maximum number of internal automatic attempts  [*...content...*] to generate a unique IUV for creditor institution  [*...content...*]. Please, try again later.\n**IUVG-1102**  | *GENERATION_AUXDIGIT_ALGORITHM_INVALID_PATTERN* | Error while generating IUV. The IUV code's section generated by timestamp in milliseconds is not correctly composited of 13 digits.\n",
     "termsOfService" : "https://www.pagopa.gov.it/",
     "title" : "IUV Generator",
-    "version" : "0.2.2"
+    "version" : "0.2.4"
   },
   "servers" : [ {
     "url" : "${host}",
@@ -72,7 +72,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/IUVGenerationRequest"
+                  "$ref" : "#/components/schemas/IUVGenerationResponse"
                 }
               }
             },
@@ -92,6 +92,9 @@
       "AppInfoResponse" : {
         "type" : "object",
         "properties" : {
+          "db" : {
+            "type" : "string"
+          },
           "environment" : {
             "type" : "string"
           },
@@ -120,6 +123,17 @@
           }
         },
         "required" : [ "auxDigit", "segregationCode" ]
+      },
+      "IUVGenerationResponse" : {
+        "type" : "object",
+        "properties" : {
+          "iuv" : {
+            "type" : "string",
+            "description" : "The unique IUV generated from computation for the creditor institution.",
+            "example" : "584756566583"
+          }
+        },
+        "required" : [ "iuv" ]
       }
     },
     "securitySchemes" : {
